--- a/runtime/vue3/playground/index.html
+++ b/runtime/vue3/playground/index.html
@@ -6,15 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vue3 Playground</title>
   <style>
-    html{-ms-overflow-style: none; overflow: -moz-scrollbars-none;}
-    html,body {height: 100%; margin: 0; padding: 0}
-    body {
-      height: fit-content;
-      min-height: 100%;
-    }
-    html::-webkit-scrollbar, .body::-webkit-scrollbar { width: 0 !important }
+    html,body {margin: 0; padding: 0}
+
     .magic-ui-page {
       overflow: hidden;
+    }
+
+    ::-webkit-scrollbar {
+      width: 0;
+    }
+
+    html,
+    body,
+    #app {
+      width: 100%;
+      height: 100%;
+    }
+
+    #app {
+      position: relative;
+      overflow: auto;
+    }
+
+    .magic-ui-container {
+      background-color: rgba(136, 136, 136, 0.5);
+    }
+
+    .action-area {
+      background-color: rgba(51, 153, 255, 0.5) !important;
     }
   </style>
 </head>
@@ -24,6 +43,6 @@
 
   <script src="https://unpkg.com/vue@next/dist/vue.global.js"></script>
 
-  <script type="module" src="/src/playground/main.ts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 </html>
