--- a/runtime/react/playground/index.html
+++ b/runtime/react/playground/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon.png" type="image/png">
   <title>React Playground</title>
   <style>
      html,body {margin: 0; padding: 0}
