feat(core,editor,ui): 新增页面片

--- a/runtime/vue2/playground/index.html
+++ b/runtime/vue2/playground/index.html
@@ -40,7 +40,7 @@
 </head>
 <body style="font-size: 14px">
   
-  <div id="app"></div>
+  <div id="app" class="in-editor"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 
