--- a/runtime/vue3/playground/index.html
+++ b/runtime/vue3/playground/index.html
@@ -40,7 +40,7 @@
 </head>
 <body style="font-size: 14px">
   
-  <div id="app"></div>
+  <div id="app" class="in-editor"></div>
 
   <script src="https://unpkg.com/vue@next/dist/vue.global.js"></script>
 
