feat(cli,data-source,runtime): 数据源支持动态按需加载

--- a/runtime/vue3/playground/index.html
+++ b/runtime/vue3/playground/index.html
@@ -42,7 +42,7 @@
   
   <div id="app" class="in-editor"></div>
 
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.4.21/vue.global.prod.min.js"></script>
 
   <script type="module" src="./main.ts"></script>
 </body>
