fix(editor,runtime): 编辑器中，依赖收集改成异步以后，可能出现配置更新了，但是依赖信息还未更新，导致渲染出来的组件不对

--- a/runtime/vue2/playground/index.html
+++ b/runtime/vue2/playground/index.html
@@ -7,8 +7,6 @@
   <link rel="icon" href="/favicon.png" type="image/png">
   <title>Vue2 Playground</title>
   <style>
-   html,body {margin: 0; padding: 0}
-
     .magic-ui-page {
       overflow: hidden;
     }
@@ -22,6 +20,8 @@
     #app {
       width: 100%;
       height: 100%;
+      margin: 0;
+      padding: 0
     }
 
     #app {
