--- a/runtime/vue3/playground/index.html
+++ b/runtime/vue3/playground/index.html
@@ -7,8 +7,6 @@
   <link rel="icon" href="/favicon.png" type="image/png">
   <title>Vue3 Playground</title>
   <style>
-    html,body {margin: 0; padding: 0}
-
     .magic-ui-page {
       overflow: hidden;
     }
@@ -22,6 +20,8 @@
     #app {
       width: 100%;
       height: 100%;
+      margin: 0;
+      padding: 0;
     }
 
     #app {
@@ -39,11 +39,9 @@
   </style>
 </head>
 <body style="font-size: 14px">
-  
   <div id="app" class="in-editor"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.4.21/vue.global.prod.min.js"></script>
-
   <script type="module" src="./main.ts"></script>
 </body>
 </html>
