--- a/runtime/vue2/playground/index.html
+++ b/runtime/vue2/playground/index.html
@@ -37,12 +37,13 @@
       background-color: rgba(51, 153, 255, 0.5) !important;
     }
   </style>
+
+  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-demi"></script>
 </head>
 <body style="font-size: 14px">
   
   <div id="app" class="in-editor"></div>
-
-  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 
   <script type="module" src="./main.ts"></script>
 </body>
