--- a/runtime/vue3/playground/index.html
+++ b/runtime/vue3/playground/index.html
@@ -37,11 +37,13 @@
       background-color: rgba(51, 153, 255, 0.5) !important;
     }
   </style>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.4.21/vue.global.prod.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-demi"></script>
 </head>
 <body style="font-size: 14px">
   <div id="app" class="in-editor"></div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.4.21/vue.global.prod.min.js"></script>
+  
   <script type="module" src="./main.ts"></script>
 </body>
 </html>
