--- a/runtime/vue/playground/index.html
+++ b/runtime/vue/playground/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.png" type="image/png">
-  <title>Vue2 Playground</title>
+  <title>Vue Playground</title>
   <style>
     .magic-ui-page {
       overflow: hidden;
@@ -21,7 +21,7 @@
       width: 100%;
       height: 100%;
       margin: 0;
-      padding: 0
+      padding: 0;
     }
 
     #app {
@@ -37,14 +37,10 @@
       background-color: rgba(51, 153, 255, 0.5) !important;
     }
   </style>
-
-  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue-demi"></script>
 </head>
 <body style="font-size: 14px">
-  
   <div id="app" class="in-editor"></div>
-
+  
   <script type="module" src="./main.ts"></script>
 </body>
 </html>
